# ytgrab

./: .gitignore  LICENSE  README.md  pyproject.toml
.codex/rules/: default.rules
src/: config.py  main.py  videos.py
