[project]
name = "ytgrab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "pillow>=12.2.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py312"
line-length = 120
